# libexif-gtk

./: Makefile.am  README  configure.ac
gtk-extensions/: Makefile.am
libexif-gtk/: Makefile.am
m4m/: Makefile.am
tests/: Makefile.am
